# short-video-media

./: .editorconfig  .env.example  .gitignore  Makefile  README.md  package-lock.json  package.json  pnpm-workspace.yaml
apps/api/: Dockerfile  Dockerfile.resolver  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260512_0544_8965394ad436_init.py  20260512_0620_add_sample_video_url.py  20260513_0400_fanza_schema_v2.py  20260513_0420_add_missing_columns.py  20260513_0430_sync_models_to_db.py  20260513_0502_e9d2e36472ae_rename_fanza_id_to_content_id.py  20260517_0300_add_search_query_to_events.py  20260517_0500_add_user_auth_tables.py  20260517_0600_add_actress_profile_columns.py  20260518_0100_add_composite_indexes.py  20260518_0200_add_goods_tables.py  20260518_0300_add_user_ng_words.py  20260519_0000_add_user_search_prefs.py  20260525_0000_drop_movies_sample_movie_url.py  20260529_0000_add_comments_and_user_display_name.py  20260529_0100_add_search_trgm_indexes.py  20260529_0500_add_interaction_events.py  20260530_0000_add_watch_count_indexes.py  20260530_0100_add_reverse_indexes_on_join_tables.py  20260602_0000_lower_watch_count_threshold_to_25.py  20260702_0000_add_movies_sample_mp4_urls.py  20260709_0000_change_watch_count_to_10_seconds.py  20260716_0000_add_movies_dmm_description.py  20260716_0100_add_movies_dmm_keywords.py  20260716_0200_null_dmm_keywords_recompute.py  20260716_0300_null_dmm_keywords_dedupe.py  20260716_0400_null_dmm_keywords_symbols.py  20260716_0500_null_dmm_keywords_single_alnum.py  20260716_0600_null_dmm_keywords_laugh_marker.py
apps/api/app/: main.py
apps/api/app/api/v1/: api.py
apps/api/app/api/v1/endpoints/: actresses.py  auth.py  comments.py  events.py  feed.py  home.py  interaction_events.py  me.py  movies.py  rankings.py  search.py  sitemap.py  tags.py
apps/api/app/core/: cache.py  comment_spam.py  config.py  rate_limit.py  request_id.py  security.py  sentry.py
apps/api/app/db/: session.py
apps/api/app/db/models/: __init__.py  actress.py  comment.py  event.py  genre.py  goods.py  interaction_event.py  movie.py  performer.py  series.py  user.py
apps/api/app/mock_data/: movies.json  movies.py
apps/api/app/repositories/: actress_repository.py  event_repository.py  goods_repository.py  interaction_event_repository.py  movie_repository.py  search_repository.py
apps/api/app/resolver/: __init__.py  browser_pool.py  config.py  extractor.py  main.py
apps/api/app/schemas/: actress.py  comment.py  event.py  feed.py  home.py  interaction_event.py  movie.py  search.py
apps/api/app/services/: actress_service.py  feed_service.py  keyword_extraction.py  movie_service.py  movie_video_url_service.py  ranking_service.py  resolve_warm_service.py  resolver_client.py  search_service.py
apps/api/scripts/: seed.py  seed_actress_profiles.py  sync_actress_profiles.py
apps/api/scripts/fixtures/: movies.json
apps/api/tests/: conftest.py  test_actress_detail.py  test_alembic_graph.py  test_auth_sign_in.py  test_comment_spam.py  test_comments.py  test_data_consistency.py  test_feed.py  test_health.py  test_home_section.py  test_infra_compose.py  test_interaction_events.py  test_invalidate_sample_url.py  test_keyword_extraction.py  test_me.py  test_movie_detail.py  test_movie_keywords_backfill.py  test_movie_service_watch_count.py  test_ranking_service.py  test_rate_limit.py  test_resolve_mp4.py  test_resolver_client.py  test_resolver_service_extractor.py  test_resolver_service_main.py  test_sample_url_rate_limit.py  test_sample_url_regex.py  test_search.py  test_search_keyword_and.py  test_search_pagination_limit_plus_one.py  test_sitemap.py  test_watch_count.py
apps/jobs/: Dockerfile  Dockerfile.playwright  Dockerfile.sync  Dockerfile.worker  RAILWAY_WORKER_DEPLOY.md  README.md  pyproject.toml
apps/jobs/src/: advisory_lock.py  debug_extract.py  extract_mp4_urls.py  post_candidates.py  post_templates.py  post_to_x.py  resolve_sample_urls.py  scheduled_config.py  scheduler.py  sync_actress_profiles.py  sync_catalog.py  sync_video_urls.py  x_client.py
apps/jobs/tests/: conftest.py  test_actress_profile.py  test_no_eager_load.py  test_post_to_x.py  test_resolve_sample_urls.py  test_scheduled_config.py  test_scheduler.py  test_smoke.py  test_sync_video_urls.py  test_upsert_idempotency.py
apps/resolver/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
apps/resolver/src/: __init__.py  browser_pool.py  config.py  main.py  resolver.py
apps/resolver/tests/: test_main.py  test_resolver.py
docs/: api-contract.md  architecture.md  db-schema.md  environments.md  minutes.md  requirements_definition_v4_0.md  requirements_definition_v5_0.md  requirements_definition_v5_6.md  requirements_definition_v5_7.md  (+3 more)
(+206 files in other folders)
