[project]
name = "short-video-media-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  "pydantic-settings>=2.0.0",
  "pyjwt>=2.9.0",
]

[project.optional-dependencies]
# Redis キャッシュを使う場合のみインストール:
#   pip install -e "apps/api[cache]"
cache = ["redis[asyncio]>=5.0.0"]
# テスト用
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
