[project]
name = "short-video-media-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  "pydantic-settings>=2.0.0",
  "pyjwt>=2.9.0",
  # DMM サンプル動画ページから MP4 URL を抽出する extractor、および
  # 各種テストで使う HTTP クライアント。h2 は httpx の HTTP/2 有効化に必要。
  "httpx>=0.27",
  "h2>=4.1.0",
  # dmm_description からの特徴語抽出 (形態素解析)。純 Python 依存で軽量。
  "janome>=0.5.0",
]

[project.optional-dependencies]
# Redis キャッシュを使う場合のみインストール:
#   pip install -e "apps/api[cache]"
cache = ["redis[asyncio]>=5.0.0"]
# 互換用: 以前の手順 `pip install -e "apps/api[http2]"` を残す。
# h2 自体は本番でも有効化したいため通常依存に含めている。
http2 = ["h2>=4.1.0"]
# テスト用
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "pyyaml>=6.0",
  # SQLite ベースで apps/jobs の async ORM テストを走らせるため
  "aiosqlite>=0.20",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
