[project]
name = "short-video-media-jobs"
version = "0.1.0"
description = "DMM (FANZA) API からカタログを定期取得して DB に同期するバッチジョブ群"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
