[project]
name = "short-video-media-jobs"
version = "0.1.0"
description = "DMM (FANZA) API からカタログを定期取得して DB に同期するバッチジョブ群"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    # scheduler.py 用 (Railway 内常駐 worker で内蔵 cron を回す)
    "apscheduler>=3.10",
    "tzdata>=2024.1",
    # DMM API 呼び出し用の非同期トークンバケット rate limiter
    # (time.sleep(1) で event loop を止めず、複数 floor / 並列 worker からも共通制御するため)
    "aiolimiter>=1.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
