[project]
name = "short-video-media-resolver"
version = "0.1.0"
description = "DMM litevideo iframe から MP4 直リンクを抽出する FastAPI サービス (Stage A: Xserver VPS, Stage B: AWS)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    # Dockerfile の mcr.microsoft.com/playwright/python:vX.Y.Z-jammy と必ず揃えること。
    # ブラウザバイナリはベースイメージ側にプリインストールされており、
    # pip で入る playwright ライブラリとバージョン不一致だと起動時にクラッシュする。
    "playwright==1.60.0",  # = Dockerfileの v1.60.0-jammy
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
